--- a/.github/workflows/python_publish.yaml
+++ b/.github/workflows/python_publish.yaml
@@ -19,8 +19,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
-          pip install dotsetup  # Add this line to install dotsetup
-          pip install packaging  # Add this line to install the 'packaging' module
+          pip install packaging 
+          pip install colorama
+
 
       - name: Lint with flake8
         run: |
