--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-pip==23.3.1
-setuptools==69.0.2
-pytest==7.4.3
-packaging~=23.2
-twine >=4.0.2
-colorama>=0.4.2
+colorama>=0.4.6
+pytest>=7.4.3
+setuptools>=69.0.2
