--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.24.2", features = ["extension-module"] }
+log = "0.4"
+chrono = "0.4"
+colored = "2.0"
+parking_lot = "0.12"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+once_cell = "1.19"
+regex = "1.10.2"
