--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "logly"
-description = "Logly is a ready to go logging utility that provides an easy way to log messages with different levels, colors, and many custom options. It is designed to be flexible, allowing you to customize the log messages based on your application's needs. Logly supports logging to both the console and a file, and it comes with built-in color-coded log levels for better visibility."
+description = "Rust Powered Python Logging Utility"
 authors = [
   { name = "muhammad-fiaz", email = "contact@muhammadfiaz.com" },
 ]
@@ -16,12 +16,12 @@ dependencies = []
 
 [dependency-groups]
 dev = [
-  "maturin==1.8.6",
-  "mypy[faster-cache]==1.15.0",
+  "maturin==1.9.1",
+  "mypy[faster-cache]==1.16.1",
   "pre-commit==4.2.0",
-  "pytest==8.3.5",
-  "pytest-cov==6.1.1",
-  "ruff==0.11.9",
+  "pytest==8.4.1",
+  "pytest-cov==6.2.1",
+  "ruff==0.12.3",
 ]
 
 [tool.maturin]
@@ -46,7 +46,7 @@ exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py38"
+target-version = "py39"
 fix = true
 
 [tool.ruff.lint]
