--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "maturin"
 [project]
 name = "logly"
 version = "0.1.0"
-description = "Rust Powered Python Logging Utility"
+description = "A stupidly simple, yet blazingly fast and powerful logging utility for Python — powered by Rust."
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.9, <3.15"
 license = { file = "LICENSE" }
