fix: Correct GitHub username and email
- Changed username from 'muhammad-fiaz' to 'muhamad-fiaz'
- Updated git config email to 'contact@muhammadfiaz.com'
- Updated all documentation URLs and links
- GitHub Actions workflow uses correct credentials

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,13 @@
 site_name: Logly Documentation
-site_url: https://muhammad-fiaz.github.io/docs/logly
+site_url: https://muhamad-fiaz.github.io/docs/logly
 site_author: Muhammad Fiaz
 site_description: >-
   Rust-powered, Loguru-like logging for Python.
   High-performance async logging with callbacks, template strings, and rotation.
 
 # Repository
-repo_name: muhammad-fiaz/logly
-repo_url: https://github.com/muhammad-fiaz/logly
+repo_name: muhamad-fiaz/logly
+repo_url: https://github.com/muhamad-fiaz/logly
 edit_uri: edit/main/docs/
 
 # Copyright
