--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Configure Git
         run: |
           git config user.name github-actions[bot]
-          git config user.email github-actions[bot]@users.noreply.github.com
+          git config user.email contact@muhammadfiaz.com
       
       - name: Build documentation
         run: mkdocs build --strict --verbose
