docs: enhance responsiveness and add code output blocks
- Improve mobile responsiveness of Next Steps grid cards
- Add comprehensive output blocks to all Python code examples
- Update quickstart.md with complete code demonstrations
- Update installation.md with troubleshooting outputs
- Enhance CSS for better mobile and tablet display
- Ensure all code blocks show expected output for better UX

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Logly Documentation
-site_url: https://muhammad-fiaz.github.io/docs/logly
+site_url: https://muhammad-fiaz.github.io/logly/
 site_author: Muhammad Fiaz
 site_description: >-
   Rust-powered, Loguru-like logging for Python.
@@ -54,6 +54,7 @@ theme:
     - content.code.copy
     - content.code.annotate
     - content.tabs.link
+    - content.footnote.tooltips
   icon:
     repo: fontawesome/brands/github
     logo: material/file-document-multiple
