--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,29 +4,27 @@ on:
   push:
     branches:
       - main
-      - dev
     paths:
       - 'docs/**'
       - 'mkdocs.yml'
       - '.github/workflows/docs.yml'
-  pull_request:
-    paths:
-      - 'docs/**'
-      - 'mkdocs.yml'
   workflow_dispatch:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -48,23 +46,24 @@ jobs:
           pip install mkdocs-minify-plugin
           pip install pymdown-extensions
       
-      - name: Configure Git
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email contact@muhammadfiaz.com
-      
       - name: Build documentation
         run: mkdocs build --strict --verbose
       
-      - name: Deploy to GitHub Pages (main branch)
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: |
-          mkdocs gh-deploy --force --clean --verbose --config-file mkdocs.yml --remote-branch gh-pages --remote-name origin
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
       
-      - name: Upload artifact (PR preview)
-        if: github.event_name == 'pull_request'
-        uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: documentation-preview
-          path: site/
-          retention-days: 7
+          path: './site'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
