--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,14 @@ disallow_untyped_defs = true
 module = ["tests.*"]
 disallow_untyped_defs = false
 
+[[tool.mypy.overrides]]
+module = ["logly._logly", "logly"]
+disallow_untyped_defs = false
+
+[[tool.mypy.overrides]]
+module = ["bench.*"]
+disallow_untyped_defs = false
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "--cov=logly --cov-report term-missing --no-cov-on-fail"
