--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "logly"
-version = "0.1.1"
+version = "0.1.2"
 description = "A stupidly simple, yet blazingly fast and powerful logging utility for Python — powered by Rust."
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.9, <3.15"
@@ -43,12 +43,16 @@ Changelog = "https://github.com/muhammad-fiaz/logly/releases"
 [dependency-groups]
 dev = [
   "maturin==1.9.1",
+  "mkdocs>=1.5.0",
+  "mkdocs-material>=9.0.0",
+  "mkdocs-minify-plugin>=0.8.0",
   "mypy[faster-cache]==1.16.1",
   "pre-commit==4.2.0",
   "pylint>=3.3.8",
   "pytest==8.4.1",
   "pytest-cov==6.2.1",
   "ruff==0.12.3",
+  "twine>=5.0.0",
 ]
 
 [tool.maturin]
@@ -62,6 +66,14 @@ disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
 module = ["tests.*"]
+disallow_untyped_defs = false
+
+[[tool.mypy.overrides]]
+module = ["logly._logly", "logly"]
+disallow_untyped_defs = false
+
+[[tool.mypy.overrides]]
+module = ["bench.*"]
 disallow_untyped_defs = false
 
 [tool.pytest.ini_options]
