New Featured Colors and Console Customizations (#60)
* feat: Complete modular architecture refactor and comprehensive documentation

- Refactor monolithic Rust codebase into modular structure:
  * Split backend into async.rs, file.rs, logging.rs modules
  * Create config/ module with state.rs
  * Create format/ module with json.rs
  * Create utils/ module with levels.rs
  * Update all imports and module declarations

- Add comprehensive documentation suite:
  * Complete MkDocs setup with Material theme
  * Add detailed API reference for all methods
  * Create extensive examples with output blocks
  * Add getting started and configuration guides
  * Update README with architecture overview

- Enhance Python API with parameter documentation
- Update type hints and improve code quality
- Add performance benchmarks and testing infrastructure
- Fix documentation accuracy (remove unimplemented compression feature)

All tests pass (54/54) and documentation builds successfully.

* feat: Add support for t-strings (Python 3.14+) and string.Template objects

- Add runtime detection for Python 3.14+ t-string support via string.templatelib.Template
- Add backward-compatible support for string.Template objects
- Update type hints to accept Union[str, Template] where available
- Modify _process_message method to handle Template object substitution
- Update all logging method docstrings to reflect new template support
- Add comprehensive test for string.Template functionality
- Update README.md and docs/index.md with new template features
- Maintain full backward compatibility with existing template string syntax

All tests pass (54/54) and documentation builds successfully.

* added Customize Colors and Customize options args

* update readme

* update readme

* formatted code

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,15 @@ site_description: >-
   Rust-powered, Loguru-like logging for Python.
   High-performance async logging with callbacks, template strings, and rotation.
 
+# SEO Configuration
+extra:
+  generator: false
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/muhammad-fiaz
+    - icon: fontawesome/brands/python
+      link: https://pypi.org/project/logly/
+
 # Repository
 repo_name: muhammad-fiaz/logly
 repo_url: https://github.com/muhammad-fiaz/logly
@@ -104,6 +113,21 @@ nav:
   - Home: index.md
   - Installation: installation.md
   - Quick Start: quickstart.md
+  - Examples:
+    - Basic Console Logging: examples/basic-console.md
+    - Template Strings: examples/template-strings.md
+    - Per-Level Controls: examples/per-level-controls.md
+    - File Logging with Rotation: examples/file-rotation.md
+    - JSON Logging: examples/json-logging.md
+    - Async Logging: examples/async-logging.md
+    - Context Binding: examples/context-binding.md
+    - Exception Handling: examples/exception-handling.md
+    - Multi-Sink Setup: examples/multi-sink.md
+  - Guides:
+    - Getting Started: guides/getting-started.md
+    - Configuration: guides/configuration.md
+    - Production Deployment: guides/production-deployment.md
+    - Development: guides/development.md
   - API Reference:
     - api-reference/index.md
     - Configuration: api-reference/configuration.md
@@ -113,14 +137,6 @@ nav:
     - Exception Handling: api-reference/exceptions.md
     - Utility Methods: api-reference/utilities.md
   - Changelog: changelog.md
-
-# Extra
-extra:
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/muhammad-fiaz
-    - icon: fontawesome/brands/python
-      link: https://pypi.org/project/logly/
 
 # Additional CSS
 extra_css:
