--- a/.github/workflows/DependencyInsights.yaml
+++ b/.github/workflows/DependencyInsights.yaml
@@ -30,9 +30,9 @@ jobs:
         run: |
           REPO_NAME=$(basename $GITHUB_REPOSITORY)
           curl -sSL "https://api.github.com/repos/${GITHUB_REPOSITORY}/network/dependents?package_type=python&per_page=1000" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
             -H "Accept: application/vnd.github.v3.star+json" \
             | jq -r '.[] | "\(.starred_at) \(.repository.html_url)"' \
             | sort -r
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
