--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "logly"
 version = "0.1.3"
 description = "Blazingly Fast Rust-Powered Python Logging Utility with Advanced Features"
-edition = "2024"
+edition = "2021"
 license = "MIT"
 readme = "README.md"
 
@@ -11,7 +11,7 @@ name = "_logly"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.26.0", features = ["extension-module"] }
+pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "ansi", "env-filter"] }
 tracing-appender = "0.2.3"
@@ -27,3 +27,18 @@ zstd = "0.13.3"
 byte-unit = "5.1.6"
 arc-swap = "1.7.1"
 once_cell = "1.21.3"
+regex = "1.11.1"
+
+[dev-dependencies]
+tempfile = "3.0"
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+strip = true
+panic = "abort"
+
+[profile.dev]
+opt-level = 0
+debug = true
