--- a/.github/workflows/python_publish.yaml
+++ b/.github/workflows/python_publish.yaml
@@ -1,7 +1,10 @@
 name: Publish Python distributions
 
+permissions:
+  contents: read
+
 # This workflow builds:
-# - Windows: Separate wheels for each Python version (3.9-3.14) - no abi3
+# - Windows: Both abi3 universal wheels AND separate wheels for each Python version (3.10-3.14)
 # - Linux/macOS: Both abi3 universal wheels AND separate wheels for each Python version
 
 on:
@@ -15,7 +18,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
 
     steps:
       - uses: actions/checkout@v4
@@ -41,6 +44,36 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-windows-${{ matrix.python-version }}
+          path: target/wheels/*.whl
+
+  build-windows-abi3:
+    name: Build Windows abi3 universal wheel
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install maturin
+
+      - name: Build abi3 wheel
+        run: |
+          maturin build --release --strip --compatibility windows
+
+      - name: Upload abi3 wheel
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-windows-abi3
           path: target/wheels/*.whl
 
   build-universal-abi3:
@@ -87,7 +120,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
 
     steps:
       - uses: actions/checkout@v4
@@ -147,8 +180,11 @@ jobs:
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    needs: [build-windows, build-universal-abi3, build-cross-platform, build-sdist]
+    needs: [build-windows, build-windows-abi3, build-universal-abi3, build-cross-platform, build-sdist]
     if: github.event_name == 'release' && github.event.action == 'published'
+    permissions:
+      id-token: write  # Required for trusted publishing to PyPI
+      contents: read
 
     steps:
       - uses: actions/download-artifact@v4
