--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "logly"
 version = "0.1.3"
 description = "A stupidly simple, yet blazingly fast and powerful logging utility for Python — powered by Rust."
 readme = { file = "README.md", content-type = "text/markdown" }
-requires-python = ">=3.9, <3.15"
+requires-python = ">=3.10, <3.15"
 license = { file = "LICENSE" }
 authors = [
   { name = "muhammad-fiaz", email = "contact@muhammadfiaz.com" },
@@ -20,7 +20,6 @@ classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -63,6 +62,7 @@ features = ["pyo3/extension-module"]
 [tool.mypy]
 check_untyped_defs = true
 disallow_untyped_defs = true
+exclude = ["examples"]
 
 [[tool.mypy.overrides]]
 module = ["tests.*"]
@@ -75,6 +75,11 @@ disallow_untyped_defs = false
 [[tool.mypy.overrides]]
 module = ["bench.*"]
 disallow_untyped_defs = false
+
+[[tool.mypy.overrides]]
+module = ["examples.*"]
+disallow_untyped_defs = false
+ignore_errors = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -97,8 +102,9 @@ output-format = "colorized"
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
+target-version = "py310"
 fix = true
+extend-exclude = ["examples"]
 
 [tool.ruff.lint]
 select = [
