--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -4,27 +4,29 @@ on:
   push:
     branches:
       - main
+  pull_request:
+
+permissions:
+  contents: read
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.10
-
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
-    - name: Install Python dependencies
-      uses: py-actions/py-dependency-install@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        path: "requirements.txt"
-        update-pip: "true"
-        update-setuptools: "true"
-        update-wheel: "true"
+        python-version: "3.10"
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+
+    - name: Install dependencies
+      run: uv sync
 
     - name: Run tests
-      run: pytest tests
+      run: uv run pytest tests -v
