--- a/requirements.txt
+++ b/requirements.txt
@@ -2,44 +2,127 @@
 #    uv pip compile pyproject.toml --group dev -o requirements.txt
 astroid==3.3.11
     # via pylint
+babel==2.17.0
+    # via mkdocs-material
+backrefs==5.9
+    # via mkdocs-material
+certifi==2025.8.3
+    # via requests
 cfgv==3.4.0
     # via pre-commit
+charset-normalizer==3.4.3
+    # via requests
+click==8.3.0
+    # via mkdocs
 colorama==0.4.6
     # via
+    #   click
+    #   mkdocs
+    #   mkdocs-material
     #   pylint
     #   pytest
 coverage==7.10.7
     # via pytest-cov
+csscompressor==0.9.5
+    # via mkdocs-minify-plugin
 dill==0.4.0
     # via pylint
 distlib==0.4.0
     # via virtualenv
+docutils==0.22.2
+    # via readme-renderer
 filelock==3.19.1
     # via virtualenv
+ghp-import==2.1.0
+    # via mkdocs
+htmlmin2==0.1.13
+    # via mkdocs-minify-plugin
+id==1.5.0
+    # via twine
 identify==2.6.14
     # via pre-commit
+idna==3.10
+    # via requests
 iniconfig==2.1.0
     # via pytest
 isort==6.0.1
     # via pylint
+jaraco-classes==3.4.0
+    # via keyring
+jaraco-context==6.0.1
+    # via keyring
+jaraco-functools==4.3.0
+    # via keyring
+jinja2==3.1.6
+    # via
+    #   mkdocs
+    #   mkdocs-material
+jsmin==3.0.1
+    # via mkdocs-minify-plugin
+keyring==25.6.0
+    # via twine
+markdown==3.9
+    # via
+    #   mkdocs
+    #   mkdocs-material
+    #   pymdown-extensions
+markdown-it-py==4.0.0
+    # via rich
+markupsafe==3.0.3
+    # via
+    #   jinja2
+    #   mkdocs
 maturin==1.9.1
     # via logly (pyproject.toml:dev)
 mccabe==0.7.0
     # via pylint
+mdurl==0.1.2
+    # via markdown-it-py
+mergedeep==1.3.4
+    # via
+    #   mkdocs
+    #   mkdocs-get-deps
+mkdocs==1.6.1
+    # via
+    #   logly (pyproject.toml:dev)
+    #   mkdocs-material
+    #   mkdocs-minify-plugin
+mkdocs-get-deps==0.2.0
+    # via mkdocs
+mkdocs-material==9.6.21
+    # via logly (pyproject.toml:dev)
+mkdocs-material-extensions==1.3.1
+    # via mkdocs-material
+mkdocs-minify-plugin==0.8.0
+    # via logly (pyproject.toml:dev)
+more-itertools==10.8.0
+    # via
+    #   jaraco-classes
+    #   jaraco-functools
 mypy==1.16.1
     # via logly (pyproject.toml:dev)
 mypy-extensions==1.1.0
     # via mypy
+nh3==0.3.0
+    # via readme-renderer
 nodeenv==1.9.1
     # via pre-commit
 orjson==3.11.3
     # via mypy
 packaging==25.0
-    # via pytest
+    # via
+    #   mkdocs
+    #   pytest
+    #   twine
+paginate==0.5.7
+    # via mkdocs-material
 pathspec==0.12.1
-    # via mypy
+    # via
+    #   mkdocs
+    #   mypy
 platformdirs==4.4.0
     # via
+    #   mkdocs-get-deps
     #   pylint
     #   virtualenv
 pluggy==1.6.0
@@ -49,22 +132,63 @@ pluggy==1.6.0
 pre-commit==4.2.0
     # via logly (pyproject.toml:dev)
 pygments==2.19.2
-    # via pytest
+    # via
+    #   mkdocs-material
+    #   pytest
+    #   readme-renderer
+    #   rich
 pylint==3.3.8
     # via logly (pyproject.toml:dev)
+pymdown-extensions==10.16.1
+    # via mkdocs-material
 pytest==8.4.1
     # via
     #   logly (pyproject.toml:dev)
     #   pytest-cov
 pytest-cov==6.2.1
     # via logly (pyproject.toml:dev)
+python-dateutil==2.9.0.post0
+    # via ghp-import
+pywin32-ctypes==0.2.3
+    # via keyring
 pyyaml==6.0.3
-    # via pre-commit
+    # via
+    #   mkdocs
+    #   mkdocs-get-deps
+    #   pre-commit
+    #   pymdown-extensions
+    #   pyyaml-env-tag
+pyyaml-env-tag==1.1
+    # via mkdocs
+readme-renderer==44.0
+    # via twine
+requests==2.32.5
+    # via
+    #   id
+    #   mkdocs-material
+    #   requests-toolbelt
+    #   twine
+requests-toolbelt==1.0.0
+    # via twine
+rfc3986==2.0.0
+    # via twine
+rich==14.1.0
+    # via twine
 ruff==0.12.3
     # via logly (pyproject.toml:dev)
+six==1.17.0
+    # via python-dateutil
 tomlkit==0.13.3
     # via pylint
+twine==6.2.0
+    # via logly (pyproject.toml:dev)
 typing-extensions==4.15.0
     # via mypy
+urllib3==2.5.0
+    # via
+    #   requests
+    #   twine
 virtualenv==20.34.0
     # via pre-commit
+watchdog==6.0.0
+    # via mkdocs
