--- a/.github/workflows/python_publish.yaml
+++ b/.github/workflows/python_publish.yaml
@@ -3,9 +3,8 @@ name: Publish Python distributions
 permissions:
   contents: read
 
-# This workflow builds:
-# - Windows: Both abi3 universal wheels AND separate wheels for each Python version (3.10-3.13)
-# - Linux/macOS: Both abi3 universal wheels AND separate wheels for each Python version
+# This workflow builds wheels for all platforms (Windows, Linux, macOS) and Python versions (3.10-3.13)
+# and publishes to PyPI when a release is created
 
 on:
   workflow_dispatch:
@@ -13,11 +12,12 @@ on:
     types: [created, published]
 
 jobs:
-  build-windows:
-    name: Build Windows wheels for Python ${{ matrix.python-version }}
-    runs-on: windows-latest
+  build-wheels:
+    name: Build wheels for ${{ matrix.os }} Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
@@ -31,107 +31,14 @@ jobs:
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install dependencies
+      - name: Install uv
         run: |
           python -m pip install --upgrade pip
-          pip install maturin
+          pip install uv
 
-      - name: Build wheels
+      - name: Install dependencies with uv
         run: |
-          maturin build --release --strip
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-windows-${{ matrix.python-version }}
-          path: target/wheels/*.whl
-
-  build-windows-abi3:
-    name: Build Windows abi3 universal wheel
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install maturin
-
-      - name: Build abi3 wheel
-        run: |
-          maturin build --release --strip
-
-      - name: Upload abi3 wheel
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-windows-abi3
-          path: target/wheels/*.whl
-
-  build-universal-abi3:
-    name: Build abi3 universal wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install maturin
-
-      - name: Build abi3 wheels
-        run: |
-          maturin build --release --strip
-
-      - name: Upload abi3 wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-${{ matrix.os }}-abi3
-          path: target/wheels/*.whl
-
-  build-cross-platform:
-    name: Build cross-platform wheels for Python ${{ matrix.python-version }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: ['3.10', '3.11', '3.12', '3.13']
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install maturin
+          uv pip install --system maturin
 
       - name: Build wheels
         run: |
@@ -175,7 +82,7 @@ jobs:
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    needs: [build-windows, build-windows-abi3, build-universal-abi3, build-cross-platform, build-sdist]
+    needs: [build-wheels, build-sdist]
     if: github.event_name == 'release' && github.event.action == 'published'
     permissions:
       id-token: write  # Required for trusted publishing to PyPI
