--- a/.github/ISSUE_TEMPLATE/help.yml
+++ b/.github/ISSUE_TEMPLATE/help.yml
@@ -1,16 +1,16 @@
 ---
-name: Question/Support
-description: Ask a question or request help with Logly
-title: "[QUESTION] "
-labels: ["question", "triage"]
+name: Help/Support
+description: Request help or support with Logly
+title: "[HELP] "
+labels: ["help", "triage"]
 assignees: []
 body:
   - type: textarea
-    id: question
+    id: help-request
     attributes:
-      label: Question
-      description: What would you like to know or what help do you need?
-      placeholder: Ask your question clearly and provide context.
+      label: Help Request
+      description: What help do you need with Logly?
+      placeholder: Describe your issue or what you need help with clearly.
     validations:
       required: true
 
@@ -18,7 +18,7 @@ body:
     id: context
     attributes:
       label: Context
-      description: Provide context about your question or issue.
+      description: Provide context about your help request.
       placeholder: |
         - What are you trying to accomplish?
         - What have you tried so far?
@@ -30,7 +30,7 @@ body:
     id: code-example
     attributes:
       label: Code Example
-      description: If applicable, provide a code example that demonstrates your question.
+      description: If applicable, provide a code example that demonstrates your issue.
       placeholder: |
         ```python
         # Your code here
