--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,6 +118,7 @@ nav:
   - Installation: installation.md
   - Quick Start: quickstart.md
   - Examples:
+    - examples/index.md
     - Basic Console Logging: examples/basic-console.md
     - Color Callback Styling: examples/color-callback.md
     - Per-Level Controls: examples/per-level-controls.md
