--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "logly"
-version = "0.1.3"
+version = "0.1.4"
 description = "Blazingly Fast Rust-Powered Python Logging Utility with Advanced Features"
-edition = "2021"
+edition = "2024"
 license = "MIT"
 readme = "README.md"
 
@@ -28,6 +28,9 @@ byte-unit = "5.1.6"
 arc-swap = "1.7.1"
 once_cell = "1.21.3"
 regex = "1.11.1"
+
+[features]
+default = []
 
 [dev-dependencies]
 tempfile = "3.0"
