--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,7 +118,9 @@ nav:
   - Installation: installation.md
   - Quick Start: quickstart.md
   - Examples:
+    - examples/index.md
     - Basic Console Logging: examples/basic-console.md
+    - Color Callback Styling: examples/color-callback.md
     - Per-Level Controls: examples/per-level-controls.md
     - Template String Formatting: examples/template-strings.md
     - File Logging with Rotation: examples/file-rotation.md
