updated codecov in actions and added pr and issue badge

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -70,6 +70,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 2
     - name: Install uv
       uses: astral-sh/setup-uv@v6
       with:
@@ -83,12 +85,14 @@ jobs:
         uv sync --frozen
         uv run maturin build
     - name: Test with pytest
-      run: uv run pytest --cov=logly --cov-report term-missing --cov-report xml
-    - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'
-      uses: codecov/codecov-action@v4
+      run: uv run pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -o junit_family=legacy
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
       with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Upload results to Codecov
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
