--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "logly"
-version = "0.1.4"
+version = "0.1.5"
 description = "Blazingly Fast Rust-Powered Python Logging Utility with Advanced Features"
 edition = "2024"
 license = "MIT"
@@ -18,22 +18,23 @@ tracing-appender = "0.2.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 chrono = { version = "0.4.42", features = ["serde"] }
-parking_lot = "0.12.4"
+parking_lot = "0.12.5"
 crossbeam-channel = "0.5.15"
 ahash = "0.8.12"
-smallvec = "1.13"
+smallvec = "1.15.1"
 flate2 = "1.1.2"
 zstd = "0.13.3"
 byte-unit = "5.1.6"
 arc-swap = "1.7.1"
 once_cell = "1.21.3"
-regex = "1.11.1"
+regex = "1.11.3"
+ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
 
 [features]
 default = []
 
 [dev-dependencies]
-tempfile = "3.0"
+tempfile = "3.23.0"
 
 [profile.release]
 opt-level = 3
